--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,22 @@
+# Core Dependencies
 Flask==3.0.0
 requests==2.31.0
+
+# Browser Automation
+selenium==4.16.0
+
+# Google API Integration
+google-auth==2.25.2
+google-auth-oauthlib==1.2.0
+google-auth-httplib2==0.2.0
+google-api-python-client==2.111.0
+
+# Cryptography for Credential Storage
+cryptography==41.0.7
+
+# Additional Network Tools
+urllib3==2.1.0
+certifi==2023.11.17
+
+# Optional: For better proxy support
+PySocks==1.7.1
